k8s/ai-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ai-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ai-service

  template:
    metadata:
      labels:
        app: ai-service

    spec:
      containers:
      - name: ai-service

        image: zeeshan/ai-service:v1

        ports:
        - containerPort: 3000
