k8s/ai-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-service

spec:
  selector:
    app: ai-service

  ports:
    - port: 3000
      targetPort: 3000
