k8s/support-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: support-service

spec:
  selector:
    app: support-service

  ports:
    - port: 3000
      targetPort: 3000
