k8s/user-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-service

spec:
  selector:
    app: user-service

  ports:
    - port: 3000
      targetPort: 3000
