k8s/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: tech-ingress

spec:

  ingressClassName: nginx

  rules:

  - host: zeeshan.agency

    http:

      paths:

      - path: /users
        pathType: Prefix

        backend:
          service:
            name: user-service

            port:
              number: 3000

      - path: /register
        pathType: Prefix

        backend:
          service:
            name: user-service

            port:
              number: 3000

      - path: /support
        pathType: Prefix

        backend:
          service:
            name: support-service

            port:
              number: 3000

      - path: /ai
        pathType: Prefix

        backend:
          service:
            name: ai-service

            port:
              number: 3000

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend-service

            port:
              number: 80
